# neirapinuela.es

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  gunicorn_config.py  messages.pot  nginx.conf  pyproject.toml  requirements.txt  robots.txt  run_debug_server.sh  run_server.py  update_translations.py  update_translations_new.py  verify_negotiation.py
neirapinuela/: app.py  build.py  i18n_translations.yaml
neirapinuela/blueprints/auth/: auth.py
neirapinuela/blueprints/auth/templates/: login.html  logout.html
neirapinuela/blueprints/measurements/: i18n_translations.yaml  measurements.py
neirapinuela/blueprints/measurements/templates/: measurements.html
neirapinuela/blueprints/multiplications/: i18n_translations.yaml  multiplications.py
neirapinuela/blueprints/multiplications/templates/: multiplications.html
neirapinuela/static/: manifest.json  neirapinuela.css
neirapinuela/templates/: about.html  apps.html  base.html  bootstrap5_base.html  crossword.html  euro_coin_game.html  gas.html  spa.html
neirapinuela/templates/nginx/: nginx.conf  servers.conf
neirapinuela/templates/supervisor/: neirapinuela.conf
src/: gunicorn_prod.py
src/neirapinuela/: __init__.py  app.py  apps.py  auth.py  config.py  i18n_translations.yaml  main.py  messages.pot  models.py  wsgi.py
src/neirapinuela/blueprints/auth/: auth.py  i18n_translations.yaml  pam_client.py  pam_server.py
src/neirapinuela/blueprints/measurements/: i18n_translations.yaml  (+1 more)
src/neirapinuela/templates/: about.html  base.html  bootstrap5_base.html  family.html  index.html  links.html  quiz.html
(+40 files in other folders)
